@@ -302,11 +302,11 @@ FUNTAB flist[] = {
   {"INUM", fun_inum, 1, 1, FN_REG | FN_STRIPANSI},
   {"IPADDR", fun_ipaddr, 1, 1, FN_REG | FN_STRIPANSI},
   {"ISDAYLIGHT", fun_isdaylight, 0, 0, FN_REG},
-  {"ISDBREF", fun_isdbref, 1, 1, FN_REG},
-  {"ISINT", fun_isint, 1, 1, FN_REG},
-  {"ISNUM", fun_isnum, 1, 1, FN_REG},
-  {"ISOBJID", fun_isobjid, 1, 1, FN_REG},
-  {"ISWORD", fun_isword, 1, 1, FN_REG},
+  {"ISDBREF", fun_isdbref, 1, 1, FN_REG | FN_STRIPANSI},
+  {"ISINT", fun_isint, 1, 1, FN_REG | FN_STRIPANSI},
+  {"ISNUM", fun_isnum, 1, 1, FN_REG | FN_STRIPANSI},
+  {"ISOBJID", fun_isobjid, 1, 1, FN_REG | FN_STRIPANSI},
+  {"ISWORD", fun_isword, 1, 1, FN_REG | FN_STRIPANSI},
   {"ITER", fun_iter, 2, 4, FN_NOPARSE},
   {"ITEMS", fun_items, 2, 2, FN_REG | FN_STRIPANSI},
   {"ITEMIZE", fun_itemize, 1, 4, FN_REG},
